# custom_serving_runtime

./: README.md  pyproject.toml
KernelRegression/: get_docker_response.py  model-settings.json  models.py  models_original.py  requirements.txt  send_grpc_inference.py  send_grpc_inference_original.py  test.py
KernelRegression/.metrics/: counter_14490.db  counter_349652.db  counter_36464.db  counter_42774.db  gauge_livesum_5617.db  histogram_14490.db  histogram_349652.db  histogram_36464.db  histogram_42774.db  histogram_5617.db  summary_14490.db  summary_349652.db  summary_36464.db  summary_42774.db  summary_5617.db
KernelRegression/mlflow_runtime/: __init__.py  codecs.py  metadata.py  runtime.py
KernelRegression/mlruns/0/: meta.yaml
KernelRegression/mlruns/832108882233838028/: meta.yaml
KernelRegression/mlruns/832108882233838028/48bbbde6e8784188830eb909e2cfacd2/: meta.yaml
KernelRegression/mlruns/832108882233838028/48bbbde6e8784188830eb909e2cfacd2/artifacts/: display_table_metrics_All.html  prediction_error_tables_TAF.html  prediction_error_tables_TAN.html  prediction_error_tables_all.html
KernelRegression/mlruns/832108882233838028/48bbbde6e8784188830eb909e2cfacd2/metrics/: All measurements_MAE_1-3_All  All measurements_MAE_4-6_All  All measurements_MAE_7-9_All  All measurements_MAE_All_All  All measurements_RMSE_1-3_All  All measurements_RMSE_4-6_All  On Plan_MAE_1-3_All  (+44 more)
KernelRegression/mlruns/832108882233838028/cebe72627b6243cd8a576bfeb1771827/: meta.yaml
KernelRegression/mlruns/models/aiml_tti_dev.tti_models.xjors2601_KernelRegression/: meta.yaml
(+75 files in other folders)
