[tool.poetry]
name = "custom-run-time"
version = "0.1.0"
description = ""
authors = ["Johannes Schwartzkopff <josch@netcompany.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.2"
mlflow = ">=2.13.2"
cachetools = "5.5.0"
cloudpickle = "3.0.0"
databricks-connect = "13.3.2"
ipython = "8.27.0"
numpy = "1.26.4"
pandas = "1.5.3"
protobuf = "4.25.5"
psutil = "6.0.0"
pyarrow = "15.0.2"
requests = "2.32.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
mlserver = "^1.6.1"
grpcio = "^1.66.1"
mlserver-mlflow = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
